--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "geospatial-frontend",
   "version": "0.1.0",
   "private": true,
@@ -56,10 +55,7 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
-=======
-  "devDependencies": {
+  ],
+  "ssr-devdependencies": {
     "concurrently": "^9.1.2"
-  }
->>>>>>> 0ee47d4bce392352a8ade91cf3ca5012a7c53c1c
-}
+  }}
